test/expected/explain_main_f2c_i.out
explain int main( char, char )
                  ^
19: error: main()'s first parameter must be int
